--- a/css/styles.css
+++ b/css/styles.css
@@ -549,19 +549,6 @@ header .container {
   background: #e55532;
 }
 
-/* Desktop-specific styles */
-@media (min-width: 1024px) {
-  #donate-widget {
-    padding: 30px;
-  }
-  
-  #donate-widget img {
-    max-width: 250px;
-    height: auto;
-    margin: 20px 0;
-  }
-}
-
 /* Main container: Horizontally center content */
 main {
   width: 95%;
@@ -815,7 +802,7 @@ p, li, a {
 }
 
 .feature-item:first-child {
-    margin-top: 0; /* No margin for the first feature */
+    margin-top: 0px; /* No margin for the first feature */
 }
 
 
@@ -831,10 +818,10 @@ p, li, a {
 .compare-btn {
   padding: 8px 16px;
   font-size: 1em;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd; /* Light border to show disabled state */
   border-radius: 6px;
-  background: white;
-  color: #9ca3af; /* Softer grey text */
+  background: #f0f0f0; /* Grey background when inactive */
+  color: #b0b0b0; /* Lighter grey text */
   cursor: not-allowed;
   text-align: center;
   height: 40px;
@@ -1011,11 +998,17 @@ p, li, a {
 
 
 .availability-icon {
-    width: 18px;  /* Reduce size */
+    width: 16px;  /* Increase size */
     height: auto;  /* Maintain aspect ratio */
     vertical-align: middle;
     margin-right: 5px;
 	margin-bottom: 3px;  /* Space between icon and text */
+}
+
+.platform-icon {
+    width: 100px;  /* Larger size for platform icons */
+    height: auto;
+    vertical-align: middle;
 }
 
 
@@ -1172,6 +1165,13 @@ p, li, a {
   margin-bottom: 10px;
 }
 
+.feature-label.sublabel {
+  font-size: 0.8em; /* Smaller than main labels */
+  color: #666; /* Gray color */
+  font-weight: 600; /* Less bold to differentiate */
+  margin-top: -30px; /* Decreased top margin to bring it closer to the row above */
+}
+
 .feature-values, .logo-row {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
@@ -1277,6 +1277,7 @@ p, li, a {
 }
 
 .feature-value .collapsible-description p {
+  margin-top: 0;
   margin-bottom: 1em;
 }
 
@@ -1419,7 +1420,15 @@ p, li, a {
 }
 
 
-	
+  #donate-widget {
+    padding: 30px;
+  }
+  
+  #donate-widget img {
+    max-width: 250px;
+    height: auto;
+    margin: 20px 0;
+  }
 	
 }
 
